// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Canvas renders correctly 1`] = `
<Canvas
  className=""
  data={
    Object {
      "BlockGroup": Object {
        "block-623187": Object {
          "x": 132,
          "y": 118,
        },
        "block-624018": Object {
          "x": 426,
          "y": -50,
        },
        "block-73377": Object {
          "x": 428,
          "y": 306,
        },
      },
      "CanvasPosition": Object {
        "gap": 1,
        "x": -67,
        "y": 230,
        "z": 0,
      },
      "LineGroup": Object {
        "line-592694": Object {
          "from": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "fromKey": "block-623187",
          "to": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "toKey": "block-624018",
        },
        "line-77619": Object {
          "from": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "fromKey": "block-73377",
          "to": Object {
            "bottom": 0,
            "height": 0,
            "left": 0,
            "right": 0,
            "top": 0,
            "width": 0,
          },
          "toKey": "block-623187",
        },
      },
      "TagGroup": Object {
        "tag-626505": Object {
          "editable": false,
          "input": "test",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 169,
          "y": 144,
        },
        "tag-629962": Object {
          "editable": false,
          "input": "test2",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 462,
          "y": -23,
        },
        "tag-80986": Object {
          "editable": false,
          "input": "test3",
          "style": Object {
            "height": 32,
            "width": 100,
          },
          "x": 463,
          "y": 333,
        },
      },
    }
  }
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": -67,
        "y": 230,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "gap": 1,
          "x": -67,
          "y": 230,
          "z": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={
          Object {
            "BlockGroup": Object {
              "block-623187": Object {
                "x": 132,
                "y": 118,
              },
              "block-624018": Object {
                "x": 426,
                "y": -50,
              },
              "block-73377": Object {
                "x": 428,
                "y": 306,
              },
            },
            "CanvasPosition": Object {
              "gap": 1,
              "x": -67,
              "y": 230,
              "z": 0,
            },
            "LineGroup": Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-623187",
              },
            },
            "TagGroup": Object {
              "tag-626505": Object {
                "editable": false,
                "input": "test",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 169,
                "y": 144,
              },
              "tag-629962": Object {
                "editable": false,
                "input": "test2",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 462,
                "y": -23,
              },
              "tag-80986": Object {
                "editable": false,
                "input": "test3",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 463,
                "y": 333,
              },
            },
          }
        }
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(-67px,230px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={
            Object {
              "block-623187": Object {
                "x": 132,
                "y": 118,
              },
              "block-624018": Object {
                "x": 426,
                "y": -50,
              },
              "block-73377": Object {
                "x": 428,
                "y": 306,
              },
            }
          }
          lineData={
            Object {
              "line-592694": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-623187",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-624018",
              },
              "line-77619": Object {
                "from": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "fromKey": "block-73377",
                "to": Object {
                  "bottom": 0,
                  "height": 0,
                  "left": 0,
                  "right": 0,
                  "top": 0,
                  "width": 0,
                },
                "toKey": "block-623187",
              },
            }
          }
          offset={
            Object {
              "gap": 1,
              "x": -67,
              "y": 230,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
          renderLine={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-623187"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 132,
                "y": 118,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 132,
                  "y": 118,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 132,
                      "y": 118,
                    },
                    "block-624018": Object {
                      "x": 426,
                      "y": -50,
                    },
                    "block-73377": Object {
                      "x": 428,
                      "y": 306,
                    },
                  }
                }
                offset={
                  Object {
                    "gap": 1,
                    "x": -67,
                    "y": 230,
                    "z": 0,
                  }
                }
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(132px,118px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-624018"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 426,
                "y": -50,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 426,
                  "y": -50,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 132,
                      "y": 118,
                    },
                    "block-624018": Object {
                      "x": 426,
                      "y": -50,
                    },
                    "block-73377": Object {
                      "x": 428,
                      "y": 306,
                    },
                  }
                }
                offset={
                  Object {
                    "gap": 1,
                    "x": -67,
                    "y": 230,
                    "z": 0,
                  }
                }
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(426px,-50px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="block-73377"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 428,
                "y": 306,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 428,
                  "y": 306,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="block-group animate-appear react-draggable"
                data={
                  Object {
                    "block-623187": Object {
                      "x": 132,
                      "y": 118,
                    },
                    "block-624018": Object {
                      "x": 426,
                      "y": -50,
                    },
                    "block-73377": Object {
                      "x": 428,
                      "y": 306,
                    },
                  }
                }
                offset={
                  Object {
                    "gap": 1,
                    "x": -67,
                    "y": 230,
                    "z": 0,
                  }
                }
                onClick={[Function]}
                onContextMenu={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(428px,306px)",
                  }
                }
                transform={null}
              />
            </DraggableCore>
          </Draggable>
          <LineGroup
            data={
              Object {
                "line-592694": Object {
                  "from": Object {
                    "bottom": 0,
                    "height": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  },
                  "fromKey": "block-623187",
                  "to": Object {
                    "bottom": 0,
                    "height": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  },
                  "toKey": "block-624018",
                },
                "line-77619": Object {
                  "from": Object {
                    "bottom": 0,
                    "height": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  },
                  "fromKey": "block-73377",
                  "to": Object {
                    "bottom": 0,
                    "height": 0,
                    "left": 0,
                    "right": 0,
                    "top": 0,
                    "width": 0,
                  },
                  "toKey": "block-623187",
                },
              }
            }
            offset={
              Object {
                "gap": 1,
                "x": -67,
                "y": 230,
                "z": 0,
              }
            }
            orientation="h"
          >
            <div
              className="LineGroup"
            >
              <SteppedLineTo
                className=""
                data={
                  Object {
                    "line-592694": Object {
                      "from": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "fromKey": "block-623187",
                      "to": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "toKey": "block-624018",
                    },
                    "line-77619": Object {
                      "from": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "fromKey": "block-73377",
                      "to": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "toKey": "block-623187",
                    },
                  }
                }
                from={
                  Object {
                    "bottom": 616,
                    "height": 80,
                    "left": 361,
                    "right": 461,
                    "top": 536,
                    "width": 100,
                    "x": 361,
                    "y": 536,
                  }
                }
                key="line-77619"
                offset={
                  Object {
                    "gap": 1,
                    "x": -67,
                    "y": 230,
                    "z": 0,
                  }
                }
                orientation="h"
                style={Object {}}
                to={
                  Object {
                    "bottom": 428,
                    "height": 80,
                    "left": 65,
                    "right": 165,
                    "top": 348,
                    "width": 100,
                    "x": 65,
                    "y": 348,
                  }
                }
              >
                <div
                  className="stepped-line-to"
                >
                  <SteppedLine
                    className=""
                    data={
                      Object {
                        "line-592694": Object {
                          "from": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "fromKey": "block-623187",
                          "to": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "toKey": "block-624018",
                        },
                        "line-77619": Object {
                          "from": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "fromKey": "block-73377",
                          "to": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "toKey": "block-623187",
                        },
                      }
                    }
                    from={
                      Object {
                        "bottom": 616,
                        "height": 80,
                        "left": 361,
                        "right": 461,
                        "top": 536,
                        "width": 100,
                        "x": 361,
                        "y": 536,
                      }
                    }
                    offset={
                      Object {
                        "gap": 1,
                        "x": -67,
                        "y": 230,
                        "z": 0,
                      }
                    }
                    orientation="h"
                    style={Object {}}
                    to={
                      Object {
                        "bottom": 428,
                        "height": 80,
                        "left": 65,
                        "right": 165,
                        "top": 348,
                        "width": 100,
                        "x": 65,
                        "y": 348,
                      }
                    }
                    x0={478}
                    x1={182}
                    y0={346}
                    y1={158}
                  >
                    <div
                      className="stepped-line"
                    >
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 616,
                            "height": 80,
                            "left": 361,
                            "right": 461,
                            "top": 536,
                            "width": 100,
                            "x": 361,
                            "y": 536,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        x0={478}
                        x1={330}
                        y0={346}
                        y1={346}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "478px",
                              "top": "346px",
                              "transform": "rotate(180deg)",
                              "width": "148px",
                            }
                          }
                        />
                      </Line>
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 616,
                            "height": 80,
                            "left": 361,
                            "right": 461,
                            "top": 536,
                            "width": 100,
                            "x": 361,
                            "y": 536,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        x0={182}
                        x1={330}
                        y0={158}
                        y1={158}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "182px",
                              "top": "158px",
                              "transform": "rotate(0deg)",
                              "width": "148px",
                            }
                          }
                        />
                      </Line>
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 616,
                            "height": 80,
                            "left": 361,
                            "right": 461,
                            "top": 536,
                            "width": 100,
                            "x": 361,
                            "y": 536,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        x0={330}
                        x1={330}
                        y0={157}
                        y1={346}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "330px",
                              "top": "157px",
                              "transform": "rotate(90deg)",
                              "width": "189px",
                            }
                          }
                        />
                      </Line>
                    </div>
                  </SteppedLine>
                </div>
              </SteppedLineTo>
              <SteppedLineTo
                className=""
                data={
                  Object {
                    "line-592694": Object {
                      "from": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "fromKey": "block-623187",
                      "to": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "toKey": "block-624018",
                    },
                    "line-77619": Object {
                      "from": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "fromKey": "block-73377",
                      "to": Object {
                        "bottom": 0,
                        "height": 0,
                        "left": 0,
                        "right": 0,
                        "top": 0,
                        "width": 0,
                      },
                      "toKey": "block-623187",
                    },
                  }
                }
                from={
                  Object {
                    "bottom": 428,
                    "height": 80,
                    "left": 65,
                    "right": 165,
                    "top": 348,
                    "width": 100,
                    "x": 65,
                    "y": 348,
                  }
                }
                key="line-592694"
                offset={
                  Object {
                    "gap": 1,
                    "x": -67,
                    "y": 230,
                    "z": 0,
                  }
                }
                orientation="h"
                style={Object {}}
                to={
                  Object {
                    "bottom": 260,
                    "height": 80,
                    "left": 360,
                    "right": 460,
                    "top": 180,
                    "width": 100,
                    "x": 360,
                    "y": 180,
                  }
                }
              >
                <div
                  className="stepped-line-to"
                >
                  <SteppedLine
                    className=""
                    data={
                      Object {
                        "line-592694": Object {
                          "from": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "fromKey": "block-623187",
                          "to": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "toKey": "block-624018",
                        },
                        "line-77619": Object {
                          "from": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "fromKey": "block-73377",
                          "to": Object {
                            "bottom": 0,
                            "height": 0,
                            "left": 0,
                            "right": 0,
                            "top": 0,
                            "width": 0,
                          },
                          "toKey": "block-623187",
                        },
                      }
                    }
                    from={
                      Object {
                        "bottom": 428,
                        "height": 80,
                        "left": 65,
                        "right": 165,
                        "top": 348,
                        "width": 100,
                        "x": 65,
                        "y": 348,
                      }
                    }
                    offset={
                      Object {
                        "gap": 1,
                        "x": -67,
                        "y": 230,
                        "z": 0,
                      }
                    }
                    orientation="h"
                    style={Object {}}
                    to={
                      Object {
                        "bottom": 260,
                        "height": 80,
                        "left": 360,
                        "right": 460,
                        "top": 180,
                        "width": 100,
                        "x": 360,
                        "y": 180,
                      }
                    }
                    x0={182}
                    x1={477}
                    y0={158}
                    y1={-10}
                  >
                    <div
                      className="stepped-line"
                    >
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 260,
                            "height": 80,
                            "left": 360,
                            "right": 460,
                            "top": 180,
                            "width": 100,
                            "x": 360,
                            "y": 180,
                          }
                        }
                        x0={182}
                        x1={329.5}
                        y0={158}
                        y1={158}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "182px",
                              "top": "158px",
                              "transform": "rotate(0deg)",
                              "width": "147.5px",
                            }
                          }
                        />
                      </Line>
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 260,
                            "height": 80,
                            "left": 360,
                            "right": 460,
                            "top": 180,
                            "width": 100,
                            "x": 360,
                            "y": 180,
                          }
                        }
                        x0={477}
                        x1={329.5}
                        y0={-10}
                        y1={-10}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "477px",
                              "top": "-10px",
                              "transform": "rotate(180deg)",
                              "width": "147.5px",
                            }
                          }
                        />
                      </Line>
                      <Line
                        className=""
                        data={
                          Object {
                            "line-592694": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-623187",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-624018",
                            },
                            "line-77619": Object {
                              "from": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "fromKey": "block-73377",
                              "to": Object {
                                "bottom": 0,
                                "height": 0,
                                "left": 0,
                                "right": 0,
                                "top": 0,
                                "width": 0,
                              },
                              "toKey": "block-623187",
                            },
                          }
                        }
                        from={
                          Object {
                            "bottom": 428,
                            "height": 80,
                            "left": 65,
                            "right": 165,
                            "top": 348,
                            "width": 100,
                            "x": 65,
                            "y": 348,
                          }
                        }
                        offset={
                          Object {
                            "gap": 1,
                            "x": -67,
                            "y": 230,
                            "z": 0,
                          }
                        }
                        orientation="h"
                        style={Object {}}
                        to={
                          Object {
                            "bottom": 260,
                            "height": 80,
                            "left": 360,
                            "right": 460,
                            "top": 180,
                            "width": 100,
                            "x": 360,
                            "y": 180,
                          }
                        }
                        x0={329.5}
                        x1={329.5}
                        y0={-11}
                        y1={158}
                      >
                        <div
                          className="line-core"
                          style={
                            Object {
                              "left": "329.5px",
                              "top": "-11px",
                              "transform": "rotate(90deg)",
                              "width": "169px",
                            }
                          }
                        />
                      </Line>
                    </div>
                  </SteppedLine>
                </div>
              </SteppedLineTo>
            </div>
          </LineGroup>
        </BlockGroup>
        <TagGroup
          data={
            Object {
              "tag-626505": Object {
                "editable": false,
                "input": "test",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 169,
                "y": 144,
              },
              "tag-629962": Object {
                "editable": false,
                "input": "test2",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 462,
                "y": -23,
              },
              "tag-80986": Object {
                "editable": false,
                "input": "test3",
                "style": Object {
                  "height": 32,
                  "width": 100,
                },
                "x": 463,
                "y": 333,
              },
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
        >
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-626505"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 169,
                "y": 144,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 169,
                  "y": 144,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="tag-group animate-appear react-draggable"
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(169px,144px)",
                  }
                }
                transform={null}
              >
                test
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-629962"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 462,
                "y": -23,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 462,
                  "y": -23,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="tag-group animate-appear react-draggable"
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(462px,-23px)",
                  }
                }
                transform={null}
              >
                test2
              </div>
            </DraggableCore>
          </Draggable>
          <Draggable
            allowAnyClick={false}
            axis="both"
            bounds={false}
            cancel={null}
            defaultClassName="react-draggable"
            defaultClassNameDragged="react-draggable-dragged"
            defaultClassNameDragging="react-draggable-dragging"
            defaultPosition={
              Object {
                "x": 0,
                "y": 0,
              }
            }
            disabled={false}
            enableUserSelectHack={true}
            grid={null}
            handle={null}
            key="tag-80986"
            offsetParent={null}
            onDrag={[Function]}
            onMouseDown={[Function]}
            onStart={[Function]}
            onStop={[Function]}
            position={
              Object {
                "x": 463,
                "y": 333,
              }
            }
            scale={1}
            transform={null}
          >
            <DraggableCore
              allowAnyClick={false}
              axis="both"
              bounds={false}
              cancel={null}
              defaultClassName="react-draggable"
              defaultClassNameDragged="react-draggable-dragged"
              defaultClassNameDragging="react-draggable-dragging"
              defaultPosition={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              disabled={false}
              enableUserSelectHack={true}
              grid={null}
              handle={null}
              offsetParent={null}
              onDrag={[Function]}
              onMouseDown={[Function]}
              onStart={[Function]}
              onStop={[Function]}
              position={
                Object {
                  "x": 463,
                  "y": 333,
                }
              }
              scale={1}
              transform={null}
            >
              <div
                className="tag-group animate-appear react-draggable"
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "touchAction": "none",
                    "transform": "translate(463px,333px)",
                  }
                }
                transform={null}
              >
                test3
              </div>
            </DraggableCore>
          </Draggable>
        </TagGroup>
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 1`] = `
<Canvas
  className=""
  data={null}
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "gap": 1,
          "x": 0,
          "y": 0,
          "z": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={null}
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
          renderLine={[Function]}
        >
          <LineGroup
            data={Object {}}
            offset={
              Object {
                "gap": 1,
                "x": 0,
                "y": 0,
                "z": 0,
              }
            }
            orientation="h"
          />
        </BlockGroup>
        <TagGroup
          data={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 2`] = `
<Canvas
  className=""
  data={
    Object {
      "BlockGroup": Object {},
      "CanvasPosition": Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      },
      "LineGroup": Object {},
      "TagGroup": Object {},
    }
  }
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "gap": 1,
          "x": 0,
          "y": 0,
          "z": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={
          Object {
            "BlockGroup": Object {},
            "CanvasPosition": Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            },
            "LineGroup": Object {},
            "TagGroup": Object {},
          }
        }
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
          renderLine={[Function]}
        >
          <LineGroup
            data={Object {}}
            offset={
              Object {
                "gap": 1,
                "x": 0,
                "y": 0,
                "z": 0,
              }
            }
            orientation="h"
          />
        </BlockGroup>
        <TagGroup
          data={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;

exports[`Canvas when data is null, it should render correctly 3`] = `
<Canvas
  className=""
  data={Object {}}
  orientation="h"
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
>
  <Draggable
    allowAnyClick={false}
    axis="both"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={
      Object {
        "gap": 1,
        "x": 0,
        "y": 0,
        "z": 0,
      }
    }
    scale={1}
    transform={null}
  >
    <DraggableCore
      allowAnyClick={false}
      axis="both"
      bounds={false}
      cancel={null}
      defaultClassName="react-draggable"
      defaultClassNameDragged="react-draggable-dragged"
      defaultClassNameDragging="react-draggable-dragging"
      defaultPosition={
        Object {
          "x": 0,
          "y": 0,
        }
      }
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      position={
        Object {
          "gap": 1,
          "x": 0,
          "y": 0,
          "z": 0,
        }
      }
      scale={1}
      transform={null}
    >
      <div
        className="Canvas react-draggable"
        data={Object {}}
        onDragOver={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        onWheel={[Function]}
        style={
          Object {
            "height": "100%",
            "touchAction": "none",
            "transform": "translate(0px,0px)",
            "width": "100%",
          }
        }
        transform={null}
      >
        <BlockGroup
          data={Object {}}
          lineData={Object {}}
          offset={
            Object {
              "gap": 1,
              "x": 0,
              "y": 0,
              "z": 0,
            }
          }
          onChange={[Function]}
          onContextMenu={[Function]}
          renderLine={[Function]}
        >
          <LineGroup
            data={Object {}}
            offset={
              Object {
                "gap": 1,
                "x": 0,
                "y": 0,
                "z": 0,
              }
            }
            orientation="h"
          />
        </BlockGroup>
        <TagGroup
          data={Object {}}
          onChange={[Function]}
          onContextMenu={[Function]}
        />
      </div>
    </DraggableCore>
  </Draggable>
</Canvas>
`;
